Added Models for ImportSource

--- a/MiniProjectFile/appsettings.json
+++ b/MiniProjectFile/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=RUJANLAPTOP//SQLEXPRESS;Database=MiniProjectFile;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
