--- a/MiniProjectFile/appsettings.json
+++ b/MiniProjectFile/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RazorPagesMovieContext": "Server=RUJANLAPTOP//SQLEXPRESS;Database=MiniProjectFile;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=RUJANLAPTOP//SQLEXPRESS;Database=MiniProjectFile;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
     "Logging": {
       "LogLevel": {
