--- a/MiniProjectFile/appsettings.json
+++ b/MiniProjectFile/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=RUJANLAPTOP//SQLEXPRESS;Database=MiniProjectFile;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=RUJANLAPTOP\\SQLEXPRESS;Database=MiniProjectFileDb;Trusted_Connection=True;Integrated Security=true;Encrypt=false"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
